--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -6,7 +6,6 @@
     <title>GYM</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.min.css" crossorigin="anonymous" />
   
@@ -18,9 +17,9 @@
             <source src="video.mp4">
         </video>
         <div class="hero-text">
-            <h1>GYM Exclusivo–</h1>
+            <h1>GYM Exclusivo</h1>
             <h1>El mejor GYM nunca antes visto</h1>
-            <p>Perfecto para cada actividad – Boxeo, Pesas, y explora lo que te gusta</p>
+            <p>Perfecto para cada actividad - Boxeo, Pesas, y explora lo que te gusta</p>
             <a [routerLink]="['/servicios']" class="btn">Ver Servicios</a>
         </div>
     </section>
