--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -17,9 +17,9 @@
             <source src="video.mp4">
         </video>
         <div class="hero-text">
-            <h1>GYM Exclusivo</h1>
+            <h1>GYM Exclusivo–</h1>
             <h1>El mejor GYM nunca antes visto</h1>
-            <p>Perfecto para cada actividad - Boxeo, Pesas, y explora lo que te gusta</p>
+            <p>Perfecto para cada actividad – Boxeo, Pesas, y explora lo que te gusta</p>
             <a [routerLink]="['/servicios']" class="btn">Ver Servicios</a>
         </div>
     </section>
