--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -18,7 +18,7 @@
       <div class="user-info">
         <span class="user-name">{{ currentUser.fullName }}</span>
         <img src="user.png" alt="Usuario" class="user-avatar">
-        <button (click)="logout()" class="logout-btn">{{"cerrar sesión" | uppercase}}</button>
+        <button (click)="logout()" class="logout-btn">Cerrar sesión</button>
       </div>
     }
     @else
