Login usando BDD

--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -80,7 +80,7 @@
     }
   </form>
 
-@if (currentUser) {
+@if (esAdmin) {
   @if (mensajes.length > 0) {
     <section class="mensajes-section my-5">
       <div class="card mensajes-card bg-dark text-light mx-auto">
