--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -24,7 +24,7 @@
   position: relative;
     width: 400px;
     height: auto;
-    background: transparent;
+    background: rgba(179, 177, 177, 0.589);
     border: 2px solid rgba(255,255,255,0.5);
     border-radius: 20px;
     backdrop-filter: blur(15px);
