--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -16,7 +16,7 @@
     @if (currentUser)
     {
       <div class="user-info">
-        <span class="user-name">{{ currentUser.fullName }}</span>
+        <span class="user-name">{{ currentUser.nombre_completo }}</span>
         <img src="user.png" alt="Usuario" class="user-avatar">
         <button (click)="logout()" class="logout-btn">Cerrar sesión</button>
       </div>
