--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -13,8 +13,10 @@
 <body>
 
     <section id="home" class="hero">
-        <video autoplay loop muted>
-            <source src="video.mp4">
+        <video autoplay muted loop playsinline preload="auto" controls>
+            <source src="./videoInicio.mp4" type="video/mp4">
+            <source src="./videoInicio.webm" type="video/webm">
+            Tu navegador no soporta el elemento video.
         </video>
         <div class="hero-text">
             <h1>GYM Exclusivo–</h1>
