--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -8,9 +8,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.min.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=OpenDyslexic&display=swap" rel="stylesheet">
+
+
   
 </head>
 <body>
+      <div class="index-root">
 
     <section id="home" class="hero">
         <video autoplay muted loop playsinline preload="auto" controls>
@@ -86,9 +91,26 @@
       <span class="visually-hidden">Siguiente</span>
     </button>
   </div>
-  
 
+<div class="accesibilidad-container"
+     [class.activo]="menuFijo"
+     (mouseenter)="!menuFijo && (menuFijo = false)"
+     (mouseleave)="!menuFijo && (menuFijo = false)">
 
+  <div class="accesibilidad-btn"
+       (mouseenter)="!menuFijo && (menuFijo = true)"
+       (click)="toggleFijarMenu()">
+    <i class="bi bi-universal-access-circle"></i>
+  </div>
+
+  <ul class="accesibilidad-menu" [class.visible]="menuFijo">
+    <li title="Lector" (click)="activarLector()"><i class="bi bi-speaker"></i></li>
+    <li title="Contraste" (click)="toggleContraste()"><i class="bi bi-sun"></i></li>
+    <li title="Texto" (click)="aumentarTexto()"><i class="bi bi-text-indent-left"></i></li>
+    <li title="Tipografía" (click)="cambiarTipografia()"><i class="bi bi-type"></i></li>
+  </ul>
+</div>
+</div>
 
 
 </body>
